tests/negative/test_ind_tup_cn_asgn_eval.orb
fnc main () () {
    eval (sym (a:((i32 i32) cn) (0 0)));
    = ([] a 0) 99;
};